liquidify staking Contract

--- a/Move.toml
+++ b/Move.toml
@@ -3,9 +3,9 @@ name = "interest_protocol"
 version = "0.0.1"
 
 [dependencies]
-Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "testnet" }
+Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "mainnet" }
 
 [addresses]
-interest_protocol =  "0x0"
+liquidify_protocol =  "0x0"
 sui =  "0x2"
 dev = "0xCAFE"
